2004-12-15  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserbutton.c: Add missing includes.

	* configure.in: Require glib 2.6.0 for 
	g_filename_display_basename.

	* gtk/gtkentrycompletion.[hc]: Make the prefix parameter 
	to the insert-prefix signal a const gchar* instead of a 
	gchar*.  (#161415, Murray Cumming)
	Also remove an unused static function.

2004-12-15  Alexander Larsson  <alexl@redhat.com>

	* gtk/gtkfilesystemunix.c (gtk_file_folder_unix_get_info):
	Use g_filename_display_basename to calculate display name.

2004-12-15  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

	* gtk/gtkmenushell.c (gtk_menu_shell_select_submenu_first) 
	(gtk_real_menu_shell_activate_current): Use 
	_gtk_menu_item_popup_submenu() to make keynav into submenus work
	instantaneously, independent of the popup delay.  (#161140)

	* gtk/gtkmenuitem.[hc]: _-prefix gtk_menu_item_popup_submenu() and
	make it non-static.

	* gtk/gtkmenuitem.c (gtk_menu_item_paint): Remove unused variables.

2004-12-15  James M. Cape  <jcape@ignore-your.tv>

	* gtk/gtkfilechooserbutton.c (struct _GtkFileChooserButtonPrivate)
	(gtk_file_chooser_button_init)
	(gtk_file_chooser_button_file_chooser_iface_init)
	(gtk_file_chooser_button_add_shortcut_folder)
	(gtk_file_chooser_button_remove_shortcut_folder) 
	(gtk_file_chooser_button_constructor)
	(gtk_file_chooser_button_set_property)
	(gtk_file_chooser_button_destroy)
	(gtk_file_chooser_button_finalize)
	(get_icon_theme) (get_display_name_for_path) (model_get_type_position)
	(model_free_row_data) (model_add_special) (model_add_other)
	(model_add_volumes) (model_add_bookmarks)
	(model_update_current_folder) (model_remove_rows)
	(filter_model_visible_func) (combo_box_row_separator_func)
	(name_cell_data_func) (update_combo_box) (fs_volumes_changed_cb)
	(fs_bookmarks_changed_cb) (combo_box_changed_cb)
	(change_icon_size): Use a GtkComboBox in SELECT_FOLDER mode (#157726).

	* gtk/gtkfilechooserbutton.c: